--- a/web/templates/customerform.html
+++ b/web/templates/customerform.html
@@ -28,8 +28,8 @@
         <input type="text" name="cus_balance"/><br/>
           
             <br/>
-            <input type="submit" class="btn btn-info name ="btnSubmit" value="Submit"/>
-            <input type="button" class="btn btn-info name ="btnback" onclick="history.back()" value="Go back"/>        
+            <input type="submit" class="btn btn-info" name ="btnSubmit" value="Submit"/>
+            <input type="button" class="btn btn-info" name ="btnback" onclick="history.back()" value="Go back"/>        
         
         </form>
     </body>
